- [Bugfix] Links for CloudFront distributions and S3 website endpoints are missing in the Copy URL and Open URL menu (S3) (#11764)
- [Bugfix] Failure downloading files (Files.com)
- [Bugfix] Return existing share URL when found (Dropbox) (#11209)
- [Bugfix] Select origin bucket for logging target with missing permission to list all buckets (S3) (#17755)

7.10.1
- [Feature] Support S3 interface endpoints (AWS PrivateLink for Amazon S3) (#11735)
- [Feature] Updated support for Files.com using proprietary REST API (Files.com)
- [Feature] Allow override of protocol specific settings in connection profiles
- [Bugfix] Unable to access team drive set as default path in bookmark (Google Drive)
- [Bugfix] Login failure with file transfers using multiple connections (FTP)
- [Bugfix] Downloads from HTTP server with no WebDAV extension support (CLI) (#11727)

7.10.0
- [Feature] Preference to set default storage class (Google Storage) (#11521)
- [Feature] Preference to set default bucket region (Google Storage)
- [Feature] Preference to set predefined set of grantees and permissions for new files (S3, Google Storage)
- [Feature] Support to set predefined ACL bucket-owner-full-control (S3, Google Storage) (#11697)
- [Feature] Context menu in browser table header to select columns (macOS) (#11718)
- [Feature] Allow selection of region when creating new bucket for third party S3 providers
- [Bugfix] Recursive search yields no results (#11424)
- [Bugfix] Canceled upload to a vault can result in an undeletable folder (Cryptomator) (#11696)
- [Bugfix] Updated .NET Framework Installer (Windows)

7.9.2
- [Bugfix] Failure opening application with previous application support directory symbolic link (macOS)

7.9.1
- [Bugfix] Slow synchronisation of a large folder (#11676)
- [Bugfix] Slow tranfer when using "compare" option for existing files (#11679)
- [Bugfix] Downloads fail with error "The specified key does not exist" (S3) (#11670)

7.9.0