@@ -76,6 +76,12 @@
     <li><span class="label label-warning">Bugfix</span> Select origin bucket for logging target with missing permission
         to list all buckets (S3) (<a target="_blank" href="https://trac.cyberduck.io/ticket/17755">#17755</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Unable to upload to buckets with uniform bucket-level access
+        enabled (Google Storage) (<a target="_blank" href="https://trac.cyberduck.io/ticket/11766">#11766</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Missing progress information when copying file (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11019">#11019</a>)
+    </li>
 </ul>
 
 <p>
